--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#8BC34A</color>
     <color name="white">#fff</color>
     <color name="white_dirty">#faf8f7</color>
+    <color name="black">#000</color>
 </resources>
