--- a/app/src/main/res/layout/watering_scripts_list_item.xml
+++ b/app/src/main/res/layout/watering_scripts_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="app.autowatering.WateringScriptViewPresentation"/>
+            type="app.autowatering.main.WateringScriptViewPresentation"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -58,18 +58,19 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/bg_white_rounded_bottom_only"
-            app:layout_constraintBottom_toBottomOf="@+id/editButton"
+            app:layout_constraintBottom_toBottomOf="@+id/actionButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editButton"/>
+            app:layout_constraintTop_toTopOf="@+id/actionButton"/>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/editButton"
+            android:id="@+id/actionButton"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/edit"
+            tools:text="@string/edit"
+            android:text="@{item.actionButtonText}"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/durationTimeTextView"/>
 
@@ -79,8 +80,10 @@
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:paddingTop="16dp"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif-medium"
             android:text="@{item.scriptIdText}"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editButton"
+            app:layout_constraintBaseline_toBaselineOf="@+id/actionButton"
             tools:text="#444"/>
 
     </android.support.constraint.ConstraintLayout>
