--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="textSizeTitle">18sp</dimen>
     <dimen name="textSizeSmall">12sp</dimen>
+    <dimen name="toolbarHeight">56dp</dimen>
 </resources>
