--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="white">#fff</color>
     <color name="white_dirty">#faf8f7</color>
     <color name="black">#000</color>
+    <color name="gray">#616161</color>
+
+    <color name="blue">#009688</color>
+    <color name="red">#FE595D</color>
 </resources>
